--- a/index.html
+++ b/index.html
@@ -1,65 +1,62 @@
-/* 
-  ##Device = Desktops
-  ##Screen = 1281px to higher resolution desktops
-*/
+<!DOCTYPE html>
+<html>
 
-@media (min-width: 1281px) {
-  
-  //CSS
-  
-}
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Module2 Assignment</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.css" />
+</head>
 
-/* 
-  ##Device = Laptops, Desktops
-  ##Screen = B/w 1025px to 1280px
-*/
+<body>
+    <h1>Our Menu</h1>
 
-@media (min-width: 1025px) and (max-width: 1280px) {
-  
-  //CSS
-  
-}
+    <div class="col-lg-4 col-md-6 col-sm-12">
+        <section>
+            <h2 id="chicken">Chicken</h2>
+            <ul>
+                <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
+                <li>Prosciutto-Wrapped Chicken with Garlic and Herb Cheese</li>
+                <li>Siri Pinter’s One-Pot Chicken Alfredo</li>
+                <li>Florentine Penne with Chicken</li>
+                <li>Garlic-Bread Chicken Nuggets with Balsamic Ketchup</li>
+            </ul>
+        </section>
+    </div>
 
-/* 
-  ##Device = Tablets, Ipads (portrait)
-  ##Screen = B/w 768px to 1024px
-*/
+    <div class="col-lg-4 col-md-6 col-sm-12">
+        <section>
+            <h2 id="pork">Pork</h2>
+            <ul>
+                <li>Pork Cheek and Black-Eyed Pea Chili</li>
+                <li>Braised Pork with Cherry Gravy</li>
+                <li>Aleppo-Pepper-Pork-and-Fennel Sandwiches</li>
+                <li>Herb-Roasted Pork Subs with Garlicky Spinach</li>
+                <li>Chinese-Style Ribs with Guava Barbecue Sauce</li>
+                <li>Pork Medallions with Onion Marmalade</li>
+            </ul>
+        </section>
+    </div>
 
-@media (min-width: 768px) and (max-width: 1024px) {
-  
-  //CSS
-  
-}
+    <div class="col-lg-4 col-md-12 col-sm-12">
+        <section>
+            <h2 id="steak">Steak</h2>
+            <ul>
+                <li>Butter-Basted Rib Eye Steaks</li>
+                <li>Balsamic Marinated Flank Steak</li>
+                <li>Grilled Hanger Steak with Kimchi-Apple Slaw</li>
+                <li>Throwback Porterhouse Steaks</li>
+                <li>Minute Steak Stacks with Herbed Anchovy Butter</li>
+                <li>Grilled Skirt Steak with Salsa Verde</li>
+            </ul>
+        </section>
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12">
+        <p>Github repository for this assignment can be found
+            <a href="https://github.com/GuanqiaoDing/Coursera-web-development/tree/master/module2_solution" target="_blank">here</a>.
+        </p>
+    </div>
+</body>
 
-/* 
-  ##Device = Tablets, Ipads (landscape)
-  ##Screen = B/w 768px to 1024px
-*/
-
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-  
-  //CSS
-  
-}
-
-/* 
-  ##Device = Low Resolution Tablets, Mobiles (Landscape)
-  ##Screen = B/w 481px to 767px
-*/
-
-@media (min-width: 481px) and (max-width: 767px) {
-  
-  //CSS
-  
-}
-
-/* 
-  ##Device = Most of the Smartphones Mobiles (Portrait)
-  ##Screen = B/w 320px to 479px
-*/
-
-@media (min-width: 320px) and (max-width: 480px) {
-  
-  //CSS
-  
-}
+</html>
